# Station_meteo

./: .gitignore  API_IMPLEMENTATION.md  CONFIG.md  DATA_PROFILE.md  LINKED_LIST.md  METEOSTAT_GUIDE.md  QUEUE.md  QUEUE_COMPLETION.txt  README.md  STRUCTURE.md  config_examples.py  demo_linked_list.py  demo_queue_cli.py  examples.py  linked_list_examples.py  pyproject.toml  queue_examples.py  requirements.txt  setup.py
projet/: __init__.py  __main__.py  api.py  cleaner.py  cli.py  config.py  linked_list.py  queue.py  retriever.py
projet/patterns/: __init__.py  factory.py  observer.py  singleton.py  strategy.py
tests/: __init__.py  conftest.py  test_config.py  test_csv_retriever.py  test_linked_list.py  test_meteostat.py  test_queue.py  test_toulouse_api.py
