[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "station-meteo"
version = "0.1.0"
description = "Weather data retrieval, cleaning, and analysis"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "VenobyTo", email = "contact@example.com"},
]

dependencies = [
    "pandas>=1.3",
    "pyarrow>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "pytest-cov>=3.0",
]

[project.scripts]
station-meteo = "projet.cli:WeatherApp.run"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers -v"
